[package]
name = "bevy_github_ci_template"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0 OR CC0-1.0"

# Compile with Performance Optimizations:
# https://bevyengine.org/learn/book/getting-started/setup/#compile-with-performance-optimizations

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
avian2d = "0.1.1"
bevy = "0.14"
bevy-inspector-egui = "0.25.1"
bevy-tnua = "0.19.0"
bevy-tnua-avian2d = "0.1.0"
bevy_asset_loader = "0.21.0"
bevy_ecs_ldtk = "0.10.0"
clap = { version = "^4", features = ["derive"] }

bevy_egui = { version = "0.28", default-features = false, features = ["default_fonts", "render"] }
egui_plot = { version = "0.28"}
egui_extras = { version = "0.28"}
bevy_framepace = "0.17.1"
web-sys = { version = "0.3.69", features = ["UrlSearchParams", "Location", "Window"]}
